test/classes/errors/nilability-assign/assign-oknil-borrowed-from-oknil-borrowed.chpl
//  lhs: borrowed?  rhs: borrowed?  ok

class MyClass {  var x: int;  }

var lhs: borrowed MyClass?;
var rhs: borrowed MyClass?;

lhs = rhs;


